--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,27 +4,31 @@ services:
     image: mongo:latest
     container_name: mongodb
     restart: unless-stopped
+    ports:
+      - "27017:27017"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: "${Admin}"
-      MONGO_INITDB_ROOT_PASSWORD: "${Admin_PASSWORD}"
+      MONGO_INITDB_ROOT_USERNAME: "${ADMIN}"
+      MONGO_INITDB_ROOT_PASSWORD: "${ADMIN_PASSWORD}"
     volumes:
       - mongo-data:/data/db
     networks:
       - private_net
 
-  node-express:
-    image: mongo-express
-    container_name: node-express
+  node-api:
+    container_name: api
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: unless-stopped
     depends_on:
       - mongodb
     environment:
-      ME_CONFIG_MONGODB_SERVER: "${Server}"
-      ME_CONFIG_MONGODB_PORT: "${Port}"
-      ME_CONFIG_MONGODB_ADMINUSERNAME: "${Admin}"
-      ME_CONFIG_MONGODB_ADMINPASSWORD: "${Admin_PASSWORD}"
-      ME_CONFIG_BASICAUTH_USERNAME: "${User}"
-      ME_CONFIG_BASICAUTH_PASSWORD: "${User_PASSWORD}"
+      ME_CONFIG_MONGODB_SERVER: "${SERVER}"
+      ME_CONFIG_MONGODB_PORT: "${PORT}"
+      ME_CONFIG_MONGODB_ADMINUSERNAME: "${ADMIN}"
+      ME_CONFIG_MONGODB_ADMINPASSWORD: "${ADMIN_PASSWORD}"
+      ME_CONFIG_BASICAUTH_USERNAME: "${USER}"
+      ME_CONFIG_BASICAUTH_PASSWORD: "${USER_PASSWORD}"
 
     ports:
       - 8081:8081
