--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Group 1",
   "type": "commonjs",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node app.js",
     "start-dev": "nodemon app.js",
