--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-version: '3.8'
 services:
   mongodb:
     image: mongo:latest
-    container_name: mongodb
+    container_name: mongo-db
     restart: unless-stopped
     ports:
       - "27017:27017"
@@ -15,6 +14,7 @@ services:
       - private_net
 
   node-api:
+    image: mongo-express:0.54
     container_name: api
     build:
       context: .
@@ -27,6 +27,7 @@ services:
       ME_CONFIG_MONGODB_PORT: "${PORT}"
       ME_CONFIG_MONGODB_ADMINUSERNAME: "${ADMIN}"
       ME_CONFIG_MONGODB_ADMINPASSWORD: "${ADMIN_PASSWORD}"
+      ME_CONFIG_SITE_PORT: "8081"
 
     ports:
       - 8081:8081
