--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     depends_on:
       - mongodb
     environment:
-      ME_CONFIG_MONGODB_SERVER: "${SERVER}"
+      ME_CONFIG_MONGODB_SERVER: "mongo-db"
       ME_CONFIG_MONGODB_PORT: "${PORT}"
       ME_CONFIG_MONGODB_ADMINUSERNAME: "${ADMIN}"
       ME_CONFIG_MONGODB_ADMINPASSWORD: "${ADMIN_PASSWORD}"
