--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     container_name: mongodb
     restart: unless-stopped
     ports:
-      - "27017:27017"
+      - ${DB_PORT:-27017}:27017
     environment:
-      MONGO_INITDB_ROOT_USERNAME: "${ADMIN}"
-      MONGO_INITDB_ROOT_PASSWORD: "${ADMIN_PASSWORD}"
+      MONGO_INITDB_ROOT_USERNAME: ${DB_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${DB_PASSWORD}
     volumes:
       - mongo-data:/data/db
     networks:
@@ -23,14 +23,14 @@ services:
     depends_on:
       - mongodb
     environment:
-      ME_CONFIG_MONGODB_SERVER: "${SERVER}"
-      ME_CONFIG_MONGODB_PORT: "${PORT}"
-      ME_CONFIG_MONGODB_ADMINUSERNAME: "${ADMIN}"
-      ME_CONFIG_MONGODB_ADMINPASSWORD: "${ADMIN_PASSWORD}"
-
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT:-27017}
+      DB_DATABASE: ${DB_DATABASE}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      PORT: ${PORT:-8081}
     ports:
-      - 8081:8081
-
+      - ${PORT:-8081}:${PORT:-8081}
     networks:
       - private_net
       - public_net
