:test_tube: Test workflow #4

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,12 +3,12 @@ name: Docker Build and Push
 on:
   push:
     branches:
-      - main
+      - feature/Workflow
   pull_request:
     types:
       - closed
     branches:
-      - main
+      - feature/Workflow
 
 jobs:
   build-and-push:
