--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,5 +22,5 @@ jobs:
         run: docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_TOKEN }}"
       
       - name: Build and push Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/tp-ci-cd:latest . && docker push ${{ secrets.DOCKERHUB_USERNAME }}/tp-ci-cd:test
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/tp-ci-cd:latest . && docker push ${{ secrets.DOCKERHUB_USERNAME }}/tp-ci-cd:latest
         
